--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,10 @@ PORT=4000
 CLIENT_URL=http://localhost:3000
 ACCESS_TOKEN=DSDSDSDSDSDSDWSDSDS
 REFRESH_TOKEN=DSDSDSDSDSDSDWSDSDS
+GIT_TEST_DEBUG_UNSAFE_DIRECTORIES=true 
+
+
+  DATABASE_NAME=phongtro123
+   DATABASE_PASSWORD=null
+    DATABASE_HOST=localhost
+   DATABASE_DIALECT=mysql
