--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,10 @@
-PORT=4000
+PORT=3306
 CLIENT_URL=http://localhost:3000
 ACCESS_TOKEN=DSDSDSDSDSDSDWSDSDS
-REFRESH_TOKEN=DSDSDSDSDSDSDWSDSDS
-GIT_TEST_DEBUG_UNSAFE_DIRECTORIES=true 
+REFRESH_TOKEN=JFHFUFHFJJF
 
-
-  DATABASE_NAME=phongtro123
-   DATABASE_PASSWORD=null
-    DATABASE_HOST=localhost
-   DATABASE_DIALECT=mysql
+DATABASE_HOST=bu5yxbcfnnrneno7tdsu-mysql.services.clever-cloud.com
+DATABASE_NAME=bu5yxbcfnnrneno7tdsu
+DATABASE_USERNAME=udfnbqwzcctv6oka
+DATABASE_PASSWORD=TX7x4ffJoIcYydbb7mLd
+DATABASE_DIALECT=mysql
